[package]
name = "wasm_sorting"
version = "0.1.0"
authors = ["mfp46 <mfp46@drexel.edu>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
rand = "0.7.2"
rand_chacha = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window"
]